add softskill and inputkrs
