# backend/app/route/course.py
@@ -1,6 +1,6 @@
 from flask import Blueprint
 from flask_restful import Api
-from resource.course import CourseAPI, CourseListAPI, InputKRSAPI, InputKRSListAPI
+from resource.course import CourseAPI, CourseListAPI, InputKRSAPI, InputKRSListAPI, SoftskillAPI, SoftskillListAPI
 
 
 course_blueprint = Blueprint("course_api", __name__)
@@ -21,3 +21,10 @@ course_blueprint_api.add_resource(
     InputKRSAPI, "/inputkrs/<string:inputkrs_id>"
 )
 
+course_blueprint_api.add_resource(
+    SoftskillListAPI, "/softskill"
+)
+
+course_blueprint_api.add_resource(
+    SoftskillAPI, "/softskill/<string:softskill_id>"
+)
